[gd_scene load_steps=3 format=3 uid="uid://birkhmnyf6an4"]

[ext_resource type="Script" uid="uid://b7qstusre3ofu" path="res://scripts/pause_menu.gd" id="1_n87rw"]
[ext_resource type="Texture2D" uid="uid://6g175xa07v8j" path="res://assets/interface/pause.png" id="2_myx47"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseBtn" type="Button" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.000061
offset_top = 10.0
offset_right = 497.0
offset_bottom = 530.0
grow_horizontal = 2
scale = Vector2(0.09, 0.09)
icon = ExtResource("2_myx47")

[node name="PausePanelContainer" type="PanelContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="PausePanelContainer/VBoxContainer"]
layout_mode = 2
text = "Pause"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="PausePanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"

[node name="retry" type="Button" parent="PausePanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Retry"

[connection signal="pressed" from="CanvasLayer/PauseBtn" to="." method="_on_pause_btn_pressed"]
[connection signal="pressed" from="PausePanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PausePanelContainer/VBoxContainer/retry" to="." method="_on_retry_pressed"]
